# PixelArcade

./: .config.toml  LICENSE  README.md  pyproject.toml
docs/: PLAN.md
src/: app.py  logging.py
src/games/breakout/: game.py
